--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.data:spring-data-rest-hal-browser'
+    compile 'org.springframework.data:spring-data-rest-hal-browser:2.6.7.RELEASE'
     compile 'com.h2database:h2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
